made some changes

--- a/i3/i3blocks.conf
+++ b/i3/i3blocks.conf
@@ -36,7 +36,7 @@ separator_block_width=10
 
 
 [playerctl]
-command=~/.i3/playerctl
+command=~/.i3/scripts/playerctl
 instance=clementine
 interval=5
 signal=10
@@ -44,14 +44,14 @@ separator=true
 
 # Volume indicator
 [volume]
-command=~/.i3/volume
+command=~/.i3/scripts/volume
 label=♪
 interval=1
 color=#C9CCDB
 
 [keymap]
 label=
-command=~/.i3/keymap
+command=~/.i3/scripts/keymap
 interval=2
 
 # Network interface monitoring
