--- a/tmux.conf
+++ b/tmux.conf
@@ -82,7 +82,7 @@ set -g visual-activity on
 
 
 # Mouse Mode
-set -g mode-mouse on
+set -g mouse on
 set -g mouse-resize-pane on
 set -g mouse-select-pane on
 set -g mouse-select-window on
