--- a/tmux.conf
+++ b/tmux.conf
@@ -96,3 +96,12 @@ set-option -g message-bg colour237
 set-option -g message-fg colour231
 set-option -g pane-border-fg green
 set-option -g pane-active-border-fg green
+
+
+
+# Plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+
+
+run '~/.tmux/plugins/tpm/tpm'
