Add a better mouse mode for tmux

--- a/tmux.conf
+++ b/tmux.conf
@@ -102,6 +102,6 @@ set-option -g pane-active-border-fg green
 # Plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
-
+set -g @plugin 'nhdaly/tmux-better-mouse-mode'
 
 run '~/.tmux/plugins/tpm/tpm'
