--- a/tmux.conf
+++ b/tmux.conf
@@ -1,5 +1,6 @@
-source '/usr/share/powerline/bindings/tmux/powerline.conf'
-
+# source '/usr/lib/python3.8/site-packages/powerline/bindings/tmux/powerline.conf'
+# source /usr/lib/python3.8/site-packages/powerline/bindings/tmux/powerline.conf
+source /Library/Frameworks/Python.framework/Versions/3.8/lib/python3.8/site-packages/powerline/bindings/tmux/powerline.conf
 # Initial setup
 set -g default-terminal xterm-256color
 set -g status-keys vi
@@ -13,7 +14,7 @@ set -g base-index 1
 
 
 # Easy config reload
-bind-key r source-file ~/.tmux.conf \; display-message "tmux.conf reloaded."
+# bind-key r source-file ~/.tmux.conf ; display-message "tmux.conf reloaded."
 
 
 # Easy clear history
@@ -35,13 +36,13 @@ set-window-option -g automatic-rename on
 set-option -g set-titles on
 
 
-# Key bindings for copy-paste
-setw -g mode-keys vi
-unbind p
-bind p paste-buffer
-bind-key -t vi-copy 'v' begin-selection
-bind-key -t vi-copy 'y' copy-selection
-set-option -g renumber-windows on
+# # Key bindings for copy-paste
+# setw -g mode-keys vi
+# unbind p
+# bind p paste-buffer
+# bind-key -t vi-copy 'v' begin-selection
+# bind-key -t vi-copy 'y' copy-selection
+# set-option -g renumber-windows on
 
 
 # Window activity monitor
@@ -83,19 +84,19 @@ set -g visual-activity on
 
 # Mouse Mode
 set -g mouse on
-set -g mouse-resize-pane on
-set -g mouse-select-pane on
-set -g mouse-select-window on
+# set -g mouse-resize-pane on
+# set -g mouse-select-pane on
+# set -g mouse-select-window on
 set -g history-limit 10000
 
 # Theme
-set -g window-status-current-bg green
-set -g window-status-current-fg black
-set -g window-status-current-attr bold
-set-option -g message-bg colour237
-set-option -g message-fg colour231
-set-option -g pane-border-fg green
-set-option -g pane-active-border-fg green
+# set -g window-status-current-bg green
+# set -g window-status-current-fg black
+# set -g window-status-current-attr bold
+# set-option -g message-bg colour237
+# set-option -g message-fg colour231
+# # set-option -g pane-border-fg green
+# # set-option -g pane-active-border-fg green
 
 
 
@@ -105,3 +106,7 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'nhdaly/tmux-better-mouse-mode'
 
 run '~/.tmux/plugins/tpm/tpm'
+
+# Fig Tmux Integration: Enabled
+# source-file ~/.fig/tmux
+# End of Fig Tmux Integration
